# ios-app-reviews

./: README.md
api/: .env-example  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  sqlmigrate.yml
api/cmd/api/: main.go
api/cmd/cron/: main.go
api/internal/client/: app_store_client.go
api/internal/controller/: app_reviews_controller.go  monitored_apps_controller.go
api/internal/database/: connection.go
api/internal/helpers/: datetime.go
api/internal/repository/: app_reviews_repository.go  monitored_apps_repository.go
api/internal/service/: app_reviews_service.go  monitored_apps_service.go
api/migrations/: 20250619235249-create_monitored_apps_table.sql  20250619235509-create_app_reviews_table.sql
web/: BUILD.bazel  components.json  index.html  main.tsx  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
web/lib/: README.md  utils.ts
web/lib/components/ui/: text.tsx
web/src/: App.tsx  app.tsx  types.ts
web/src/api/: appReviews.ts  monitoredApps.ts
web/src/components/: MonitoredAppCard.tsx  NewMonitoredAppDialog.tsx  PageLayout.tsx  ReviewsTable.tsx
web/src/pages/: HomePage.tsx  ReviewsPage.tsx
