load("@aspect_rules_vite//vite:defs.bzl", "vite_build")

vite_build(
    name = "web",
    srcs = glob([
        "src/**/*",
        "public/**/*",
        "index.html",
        "package.json",
        "vite.config.ts",
    ]),
    data = [
        "//web:package.json",
        "//web:vite.config.ts",
    ],
) 